crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3013_pin_pip_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3013",
    "help": null,
    "labels": [],
    "message": "pin versions in pip install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3013",
    "help": null,
    "labels": [],
    "message": "pin versions in pip install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3013",
    "help": null,
    "labels": [],
    "message": "pin versions in pip install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
