crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3015_apt_get_no_install_recommends_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3015",
    "help": null,
    "labels": [],
    "message": "use --no-install-recommends with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "info"
  },
  {
    "code": "RDL3015",
    "help": null,
    "labels": [],
    "message": "use --no-install-recommends with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "info"
  }
]
