crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3018_pin_apk_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "RDL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
