crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3019_apk_add_no_cache_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 391
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3019",
    "help": null,
    "labels": [],
    "message": "use `apk add --no-cache` to avoid persisting the apk package cache",
    "path": "",
    "primary_span": {
      "end_byte": 58,
      "end_column": 27,
      "end_line": 3,
      "start_byte": 32,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "info"
  },
  {
    "code": "RDL3019",
    "help": null,
    "labels": [],
    "message": "use `apk add --no-cache` to avoid persisting the apk package cache",
    "path": "",
    "primary_span": {
      "end_byte": 168,
      "end_column": 35,
      "end_line": 6,
      "start_byte": 134,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "info"
  },
  {
    "code": "RDL3019",
    "help": null,
    "labels": [],
    "message": "use `apk add --no-cache` to avoid persisting the apk package cache",
    "path": "",
    "primary_span": {
      "end_byte": 228,
      "end_column": 38,
      "end_line": 8,
      "start_byte": 191,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "info"
  }
]
