crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3020_prefer_copy_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 11,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "error"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 12,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "error"
  }
]
