crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3021_copy_multiple_destination_slash_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "RDL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "error"
  }
]
