crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3022_copy_from_previous_stage_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "RDL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  },
  {
    "code": "RDL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 13,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 13
    },
    "severity": "warning"
  }
]
