crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3023_copy_from_own_stage_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "error"
  },
  {
    "code": "RDL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "error"
  }
]
