crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3024_unique_stage_names_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3024",
    "help": null,
    "labels": [],
    "message": "stage alias `build` is defined more than once",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3024",
    "help": null,
    "labels": [],
    "message": "stage alias `release` is defined more than once",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "error"
  }
]
